--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "@emoji-mart/monorepo",
+  "name": "@cinefy/emoji-mart-monorepo",
   "version": "1.0.0",
   "private": true,
   "workspaces": [
     "packages/*"
   ],
   "scripts": {
-    "dev": "yarn workspace @emoji-mart/website dev",
-    "build": "yarn workspace emoji-mart build",
-    "build:data": "yarn workspace @emoji-mart/data build",
-    "build:react": "yarn workspace @emoji-mart/react build",
-    "build:website": "yarn workspace @emoji-mart/website build",
+    "dev": "yarn workspace @cinefy/emoji-mart-website dev",
+    "build": "yarn workspace @cinefy/emoji-mart build",
+    "build:data": "yarn workspace @cinefy/emoji-mart-data build",
+    "build:react": "yarn workspace @cinefy/emoji-mart-react build",
+    "build:website": "yarn workspace @cinefy/emoji-mart-website build",
     "check:types": "tsc",
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write .",
