--- a/packages/emoji-mart-data/package.json
+++ b/packages/emoji-mart-data/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@emoji-mart/data",
+  "name": "@cinefy/emoji-mart-data",
   "version": "1.2.1",
   "description": "Data for Emoji Mart; the emoji picker for the web.",
   "license": "MIT",
