--- a/packages/emoji-mart-react/package.json
+++ b/packages/emoji-mart-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@emoji-mart/react",
+  "name": "@cinefy/emoji-mart-react",
   "version": "1.1.1",
   "description": "React wrapper for Emoji Mart; the emoji picker for the web.",
   "license": "MIT",
