--- a/packages/emoji-mart-data/package.json
+++ b/packages/emoji-mart-data/package.json
@@ -3,10 +3,10 @@
   "version": "1.2.1",
   "description": "Data for Emoji Mart; the emoji picker for the web.",
   "license": "MIT",
-  "homepage": "https://missiveapp.com/open/emoji-mart",
+  "homepage": "https://github.com/JMiinn/emoji-mart#",
   "repository": {
     "type": "git",
-    "url": "https://github.com/missive/emoji-mart",
+    "url": "https://github.com/JMiinn/emoji-mart#",
     "directory": "packages/emoji-mart-data"
   },
   "main": "sets/15/native.json",
