--- a/packages/emoji-mart-react/package.json
+++ b/packages/emoji-mart-react/package.json
@@ -3,10 +3,10 @@
   "version": "1.1.1",
   "description": "React wrapper for Emoji Mart; the emoji picker for the web.",
   "license": "MIT",
-  "homepage": "https://missiveapp.com/open/emoji-mart",
+  "homepage": "https://github.com/JMiinn/emoji-mart#",
   "repository": {
     "type": "git",
-    "url": "https://github.com/missive/emoji-mart",
+    "url": "https://github.com/JMiinn/emoji-mart#",
     "directory": "packages/emoji-mart-react"
   },
   "source": "react.tsx",
@@ -18,7 +18,7 @@
     "prepublishOnly": "yarn build"
   },
   "peerDependencies": {
-    "emoji-mart": "^5.2",
+    "@cinefy/emoji-mart": "^5.2",
     "react": "^16.8 || ^17 || ^18 || ^19"
   },
   "files": [
