--- a/packages/emoji-mart/package.json
+++ b/packages/emoji-mart/package.json
@@ -3,10 +3,10 @@
   "version": "5.6.0",
   "description": "Emoji picker for the web",
   "license": "MIT",
-  "homepage": "https://missiveapp.com/open/emoji-mart",
+  "homepage": "https://github.com/JMiinn/emoji-mart#",
   "repository": {
     "type": "git",
-    "url": "https://github.com/missive/emoji-mart",
+    "url": "https://github.com/JMiinn/emoji-mart#",
     "directory": "packages/emoji-mart"
   },
   "source": "src/index.ts",
