--- a/packages/emoji-mart-react/package.json
+++ b/packages/emoji-mart-react/package.json
@@ -13,6 +13,7 @@
   "types": "dist/index.d.ts",
   "main": "dist/main.js",
   "module": "dist/module.js",
+  "style": "PickerStyles.scss",
   "scripts": {
     "build": "parcel build --no-autoinstall",
     "prepublishOnly": "yarn build"
